♻️ Refacto ui part